@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: SplitList.3,v 1.6.4.5 2008/10/17 20:52:23 dgp Exp $
+'\" RCS: @(#) $Id: SplitList.3,v 1.6.4.6 2008/12/18 23:19:07 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_SplitList 3 8.0 Tcl "Tcl Library Procedures"
@@ -87,7 +87,7 @@ int argc, code;
 char *string;
 char **argv;
 \&...
-code = Tcl_SplitList(interp, string, &argc, &argv);
+code = \fBTcl_SplitList\fR(interp, string, &argc, &argv);
 .CE
 .PP
 Then you should eventually free the storage with a call like the
@@ -186,3 +186,5 @@ the length of string \fIsrc\fR is specified by the \fIlength\fR
 argument, and the string may contain embedded nulls.
 .SH KEYWORDS
 backslash, convert, element, list, merge, split, strings
+.SH "SEE ALSO"
+Tcl_GetListFromObj(3)
